<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--Parameter for connection initialization-->
    <string name="error_message_node_init">errorMessage</string>
    <string name="serviceResultReceiver">ServiceResultReceiver</string>

    <!--Parameter for global preferences (load at app start)-->
    <string name="masterId">masterId</string>
    <string name="topicPublisher">topicPublisher</string>
    <string name="topicSubscriber">topicSubscriber</string>

    <!--Parameter for shared preferences (between activities)-->
    <string name="shared_pref_connection_data">connectionData</string>

    <!--Parameter for execute activity-->
    <string name="button_state_array">buttonData</string>
    <string name="axes_state_array">axesData</string>

    <!--Parameter for layout management-->
    <string name="svArray">svRectArray</string>
    <string name="speed">speed</string>
    <string name="start_sensor_calibration">startSensorCalibration</string>
    <string name="nodeGraphName">nodeGraphName</string>
    <string name="resultCode">resultCode</string>

    <!--Parameter for about activity-->
    <string name="about_app_description_part_one">
        <large><b>Description of the app:</b></large>
        \n<small>The App FloriBot HMI was build at Heilbronn University within a Bachelor thesis.
        With this app you can control the robot FloriBot (with a differential drive) in two axes.
        By moving the phone around the y-axes the robot will drive in x - direction (translation). If you move the phone around the x-axes
        the robot turn around z-axis.
        </small>
    </string>

     <string name="about_app_description_part_two">
         \n<small>The operation system of the robot is the <i>Robot Operating System</i> (ROS).
         In general you can send and receive data on existing topics.
         To do so, the app creates a publisher to provide control data on a specific topic.
         With the created subscriber the verification data (send from the robot) were received.
        </small>
    </string>

    <string name="about_app_functions">
        <large><b>Possibilities of the app:</b></large>
        \n<small>You can control the robot in two operation modes. The manual and the automatic mode.
        In the manual mode you can decide between control with the acceleration sensor and simple joystick buttons.
        If you want to control the robot with joystick buttons you can adjust the current acceleration value with a slider bar.
        To visualize the acceleration quantity there are two progress bars. One for the translation in x - axis and the other
        for the steering around the z - axis.
        \nThese visualization are only present in manual mode with sensor control.
        </small>
    </string>

    <string name="app_author">
        <large><b>Author:</b></large>
        \n<small>Manuel-Leonhard Rixen</small>
    </string>

    <string name="app_version">
        <large><b>Version:</b></large>
        \n<small>1.0</small>
    </string>

    <!--PARAMETER FOR HELP DIALOG-->
    <string name="help_connection_parameter_text">
        <large><b>Connection establishment:</b></large>
        \n<small>1. Enter ROS Master-Address in the first field.</small>
        \n<small>2. Enter topic name of the publisher (send data to robot). </small>
        \n<small>3. Enter topic name of the subscriber (receive data from robot).</small>
    </string>
    <string name="help_sensor_control_text">
        <large><b>Control with acceleration sensor:</b></large>
        \n<small>1. Press the button for manual control mode.</small>
        \n<small>2. Press the calibration button to get custom start orientation.</small>
        \n<small>3. Confirm the initial position of your phone.</small>
        \n<small>4. Move your phone and press the dead man\'s push button to control the robot.</small>
    </string>
    <string name="help_joystick_control_text">
        <large><b>Control with joystick buttons:</b></large>
        \n<small>1. Press the button for manual control mode.</small>
        \n<small>2. Adjust the acceleration amount with the slider bar.</small>
        \n<small>3. Press the specific joystick button.</small>
    </string>
    <string name="help_auto_control_text">
        <large><b>Automatic mode - Task 1:</b></large>
        \n<small>1. Press the button for automatic control mode.</small>
        \n<small>2. Press the specific button to set the first turn of the robot.</small>
    </string>
    <string name="help_exit_connection_text">
        <large><b>Close connection:</b></large>
        \n<small>1. Press the exit button to close the connection.</small>
        <small>2. Confirm by pressing ok.</small>
    </string>
         <string name="tip_text">
        <large><b>Tipp:</b></large>
        \n<small>The yellow indicators on top of the control mode buttons indicates the currently active control mode.</small>
    </string>

    <!--General Parameter-->
    <string name="app_name">FloriBot HMI</string>

    <!--Parameter for service-->
    <string name="ticker_message">Start service...</string>
    <string name="notification_text">Tab to get back.</string>
    <string name="notification_title">FloriBot HMI - Control menu</string>

    <!--Overflow parameter-->
    <string name="title_activity_help">Help</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_settings">Properties</string>
    <string name="theme_header">Theme</string>
    <string name="blueTheme">Blue light</string>
    <string name="greenTheme">Green Light</string>
    <string name="landscape">Landscape</string>
    <string name="reverseLandscape">Reverse landscape</string>

    <!--Parameter for main activity-->
    <string name="title_activity_main">Connection establishment</string>
    <string name="title_connect_button_main">Connect</string>
    <string name="toast_enter_master">Please Enter master address!</string>
    <string name="toast_enter_topic">Please Enter topic address!</string>
    <string name="toast_enter_node_graph_name">Please enter node graph name (Settings)!</string>
    <string name="state_init_publisher">state</string>
    <string name="dialog_init_publisher">Wait until connection is established.</string>
    <string name="connection_establishment_error_uri_syntax">Invalid master ID!</string>
    <string name="connection_establishment_error_display_wake_lock">No display wake lock established!</string>
    <string name="connection_establishment_error_wifi_activation">No wifi activation established!</string>
    <string name="connection_establishment_error_airplane">Airplane mode is disabled, please enable!</string>
    <string name="connection_establishment_error_wifi_lock">No wifi wake lock established!</string>

    <!--Parameter for execute activity-->
    <string name="dialog_message_start_calibration">Please hold your phone in start orientation!</string>
    <string name="dialog_negative_button">Cancel</string>
    <string name="dialog_positive_button">OK</string>
    <string name="dialog_message_close_connection">Close connection?</string>
    <string name="title_master_address">Master address: </string>
    <string name="title_topic_publisher">Publisher topic: </string>
    <string name="title_topic_subscriber">Subscriber topic: </string>
    <string name="title_activity_execute">Control menu</string>
    <string name="title_exit_button_execute">Exit</string>

    <!--Parameter for layout management-->
    <string name="dialog_title">Warning</string>
    <string name="toast_enter_all">You need to set the connection parameter!</string>
    <string name="node_graph_name_header">Node name:</string>
    <string name="serviceStopped">Can\'t start node. Please check your network.</string>


    <string name="theme_prompt">Select theme</string>
    <string name="orientation_prompt">Choose orientation</string>
    <string name="phone_calibration_area">Phone is not in calibration area!</string>
    <string name="hint_master_destination">http://192.168.137.191:11311</string>
    <string name="hint_topic_publisher">/joy</string>
    <string name="hint_topic_subscriber">/joyFeedback</string>
    <string name="nodename_hint">floribot/hmi</string>
    <string name="orientation_header">Orientation</string>
    <string name="toast_whitespace">Whitespaces in connection parameter are not allowed!</string>
    <string name="connection_establishment_ping_error">Host computer isn\'t reachable.</string>
    <string name="node_name_example_text">Bsp.: teleop</string>

    <!--Parameter for settings activity-->
    <string name="title_save_button_preferences">Save</string>
    <string name="subscriber_topic_example_text">Bsp.: /joy_feedback</string>
    <string name="publisher_topic_example_text">Bsp.: /joy</string>
    <string name="master_address_example_text">Bsp.: http://141.7.24.119:11311</string>
    <string name="dialog_message_on_tablet">Tablets are not supported. Please use another device!.</string>
    <string name="textView_example_orientation">Example orientation:</string>

</resources>
