<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:controlMenu="de.hs_heilbronn.floribot.android.floribot_hmi.ConnectionEstablishment">

    <Button
        android:id="@+id/connectButton"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/title_connect_button_main"
        android:background="@drawable/button_selector"
        android:onClick="onButtonClicked"/>

    <!--BEGIN FIRST BEAM-->
    <TextView
        android:id="@+id/textView_master_destination"
        android:layout_width="@dimen/textViewWidth"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/textViewMarginLeft"
        android:layout_marginTop="@dimen/editTextMarginTop"
        android:textSize="@dimen/textSizeNormal"
        android:text="@string/title_master_address"
        android:background="@color/ModernBlue"
        android:textColor="#FFFFFF"
        android:paddingBottom="15dp"
        android:paddingTop="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="10dp"/>
    <TextView
        android:id="@+id/textView_master_destination_example"
        android:layout_width="@dimen/textViewWidthExampleText"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView_master_destination"
        android:layout_alignLeft="@+id/textView_master_destination"
        android:background="@color/ModernBlue"
        android:text="@string/master_address_example_text"
        android:textSize="@dimen/textSizeSmall"
        android:paddingLeft="5dp"
        android:paddingBottom="5dp"
        android:textColor="#ffffff"/>

    <EditText
        android:id="@+id/editText_master_destination"
        android:layout_width="@dimen/editTextWidth"
        android:layout_alignTop="@id/textView_master_destination"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_edit_text"
        android:textSize="@dimen/textSizeNormal"
        android:inputType="textUri"
        android:textColor="#FFFFFF"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:paddingLeft="5dp"
        android:paddingRight="10dp"
        android:layout_toRightOf="@id/textView_master_destination"/>
    <!--END FIRST BEAM-->

    <!--BEGIN SECOND BEAM-->
    <TextView
        android:id="@+id/textView_topic_publisher"
        android:layout_width="@dimen/textViewWidth"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/textViewMarginLeft"
        android:layout_marginTop="15dp"
        android:textSize="@dimen/textSizeNormal"
        android:text="@string/title_topic_publisher"
        android:background="@color/ModernBlue"
        android:textColor="#FFFFFF"
        android:paddingBottom="15dp"
        android:paddingTop="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="10dp"
        android:layout_below="@id/textView_master_destination"/>
    <TextView
        android:id="@+id/textView_topic_publisher_example"
        android:layout_width="@dimen/textViewWidthExampleText"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView_topic_publisher"
        android:layout_alignLeft="@+id/textView_topic_publisher"
        android:background="@color/ModernBlue"
        android:text="@string/publisher_topic_example_text"
        android:textSize="@dimen/textSizeSmall"
        android:paddingLeft="5dp"
        android:paddingBottom="5dp"
        android:textColor="#ffffff"/>

    <EditText
        android:id="@+id/editText_topic_publisher"
        android:layout_width="@dimen/editTextWidth"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_edit_text"
        android:inputType="text"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/textSizeNormal"
        android:layout_alignTop="@id/textView_topic_publisher"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:paddingLeft="5dp"
        android:paddingRight="10dp"
        android:layout_toRightOf="@id/textView_topic_publisher"/>
    <!--END SECOND BEAM-->

    <!--BEGIN THIRD BEAM-->
    <TextView
        android:id="@+id/textView_topic_subscriber"
        android:layout_width="@dimen/textViewWidth"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/textViewMarginLeft"
        android:layout_marginTop="15dp"
        android:textSize="@dimen/textSizeNormal"
        android:text="@string/title_topic_subscriber"
        android:background="@color/ModernBlue"
        android:textColor="#FFFFFF"
        android:paddingBottom="15dp"
        android:paddingTop="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="10dp"
        android:layout_below="@id/textView_topic_publisher"/>

    <TextView
        android:id="@+id/textView_topic_subscriber_example"
        android:layout_width="@dimen/textViewWidthExampleText"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView_topic_subscriber"
        android:layout_alignLeft="@+id/textView_topic_subscriber"
        android:background="@color/ModernBlue"
        android:text="@string/subscriber_topic_example_text"
        android:textSize="@dimen/textSizeSmall"
        android:paddingLeft="5dp"
        android:paddingBottom="5dp"
        android:textColor="#ffffff"/>

    <EditText
        android:id="@+id/editText_topic_subscriber"
        android:layout_width="@dimen/editTextWidth"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_edit_text"
        android:inputType="text"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/textSizeNormal"
        android:layout_alignTop="@id/textView_topic_subscriber"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:paddingLeft="5dp"
        android:paddingRight="10dp"
        android:layout_toRightOf="@id/textView_topic_publisher"/>
    <!--END SECOND BEAM-->

    <!--BEGIN FOURTH BEAM-->
    <TextView
        android:id="@+id/textView_node_name"
        android:layout_width="@dimen/textViewWidth"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/textViewMarginLeft"
        android:layout_marginTop="15dp"
        android:textSize="@dimen/textSizeNormal"
        android:text="@string/node_graph_name_header"
        android:background="@color/ModernBlue"
        android:textColor="#FFFFFF"
        android:paddingBottom="15dp"
        android:paddingTop="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="10dp"
        android:layout_below="@id/textView_topic_subscriber"/>

    <TextView
        android:id="@+id/textView_node_name_example"
        android:layout_width="@dimen/textViewWidthExampleText"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView_node_name"
        android:layout_alignLeft="@+id/textView_node_name"
        android:background="@color/ModernBlue"
        android:text="@string/node_name_example_text"
        android:textSize="@dimen/textSizeSmall"
        android:paddingLeft="5dp"
        android:paddingBottom="5dp"
        android:textColor="#ffffff"/>

    <EditText
        android:id="@+id/editText_node_name"
        android:layout_width="@dimen/editTextWidth"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_edit_text"
        android:inputType="text"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/textSizeNormal"
        android:layout_alignTop="@id/textView_node_name"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:paddingLeft="5dp"
        android:paddingRight="10dp"
        android:layout_toRightOf="@id/textView_node_name"/>
    <!--END FOURTH BEAM-->

</RelativeLayout>
