<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="400dp"
    android:layout_height="wrap_content"
    android:background="#ffffff">

    <TextView
        android:id="@+id/textView_dialog"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:text=""
        android:textSize="18sp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/textView_orientation_example_text"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_below="@+id/textView_dialog"
        android:gravity="center_vertical"
        android:textColor="#000000"
        android:text="@string/textView_example_orientation"
        android:textSize="@dimen/textSizeSmall"
        android:layout_marginLeft="10dp"/>

    <ImageView
        android:id="@+id/imageView_orientation_example1"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_toRightOf="@id/textView_orientation_example_text"
        android:layout_marginLeft="0dp"
        android:layout_below="@id/textView_dialog"
        android:src="@drawable/orientation_example1"/>

    <ImageView
        android:id="@+id/imageView_orientation_example2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_below="@id/textView_dialog"
        android:layout_alignParentRight="true"
        android:layout_marginRight="100dp"
        android:src="@drawable/orientation_example2"/>



    <Button
        android:id="@+id/positive_button"
        android:text="@string/dialog_positive_button"
        android:textColor="#000000"
        android:layout_below="@id/imageView_orientation_example1"
        android:background="@drawable/dialog_button_selector"
        android:layout_width="100dp"
        android:layout_height="50dp"/>

    <Button
        android:id="@+id/negative_button"
        android:text="@string/dialog_negative_button"
        android:background="@drawable/dialog_button_selector"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:textColor="#000000"
        android:layout_alignParentRight="true"
        android:layout_alignBottom="@id/positive_button"/>

</RelativeLayout>